Remove .woff and fix issues caused by spacing in html breaking the grid

--- a/web/css/ui/_fonts.scss
+++ b/web/css/ui/_fonts.scss
@@ -2,7 +2,6 @@
     font-family: 'JennaSueRegular';
     src: url('../fonts/jenna-sue/JennaSue-webfont.eot');
     src: url('../fonts/jenna-sue/JennaSue-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/jenna-sue/JennaSue-webfont.woff') format('woff'),
          url('../fonts/jenna-sue/JennaSue-webfont.svg#JennaSueRegular') format('svg');
     font-weight: normal;
     font-style: normal;
